<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="YS Display-Bold.ttf">
            <string>YSDisplay-Bold</string>
        </array>
        <array key="YS Display-Medium.ttf">
            <string>YSDisplay-Medium</string>
        </array>
    </customFonts>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="3ct-CI-dSC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="g0U-bH-7Fs">
                                <rect key="frame" x="20" y="58" width="374" height="788"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F8T-Qd-rFL">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="23.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mKp-B0-SKL" userLabel="Question Title Label">
                                                <rect key="frame" x="0.0" y="0.0" width="338" height="23.5"/>
                                                <color key="backgroundColor" name="black"/>
                                                <color key="tintColor" name="black"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="white"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vRJ-8W-MH1" userLabel="Index Label">
                                                <rect key="frame" x="338" y="0.0" width="36" height="23.5"/>
                                                <color key="backgroundColor" name="black"/>
                                                <color key="tintColor" name="black"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="white"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8DE-Gm-Gqk">
                                        <rect key="frame" x="0.0" y="43.5" width="374" height="561"/>
                                        <color key="backgroundColor" name="white"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="8DE-Gm-Gqk" secondAttribute="height" multiplier="2:3" id="g0F-jq-cEE"/>
                                        </constraints>
                                    </imageView>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oII-L6-Njr">
                                        <rect key="frame" x="0.0" y="624.5" width="374" height="83.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше, чем 5?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u0O-UB-89O" userLabel="Question Label">
                                                <rect key="frame" x="20" y="5" width="334" height="73.5"/>
                                                <color key="backgroundColor" name="black"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="24"/>
                                                <color key="textColor" name="white"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                        <color key="backgroundColor" name="black"/>
                                        <constraints>
                                            <constraint firstItem="u0O-UB-89O" firstAttribute="leading" secondItem="oII-L6-Njr" secondAttribute="leading" constant="20" id="JRv-HS-SdS"/>
                                            <constraint firstItem="u0O-UB-89O" firstAttribute="top" secondItem="oII-L6-Njr" secondAttribute="top" constant="5" id="LYV-nZ-A8B"/>
                                            <constraint firstAttribute="trailing" secondItem="u0O-UB-89O" secondAttribute="trailing" constant="20" id="Xdr-kl-Xe5"/>
                                            <constraint firstAttribute="bottom" secondItem="u0O-UB-89O" secondAttribute="bottom" constant="5" id="aYU-yf-6C4"/>
                                        </constraints>
                                    </view>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="5Ns-5X-6W0">
                                        <rect key="frame" x="0.0" y="728" width="374" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Mv-Qm-cnC" userLabel="No button">
                                                <rect key="frame" x="0.0" y="0.0" width="177" height="60"/>
                                                <color key="backgroundColor" name="white"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="tintColor" name="black"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Нет">
                                                    <color key="titleColor" name="black"/>
                                                    <color key="titleShadowColor" name="white"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Rp-5D-JRq"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7rd-2q-on5" userLabel="Yes button">
                                                <rect key="frame" x="197" y="0.0" width="177" height="60"/>
                                                <color key="backgroundColor" name="white"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="tintColor" name="black"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Да">
                                                    <color key="titleColor" name="black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Kz3-pE-IT4"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="6HF-TU-2NV" userLabel="height = 60"/>
                                            <constraint firstItem="7rd-2q-on5" firstAttribute="height" secondItem="1Mv-Qm-cnC" secondAttribute="height" id="D6R-B4-mb9"/>
                                            <constraint firstItem="7rd-2q-on5" firstAttribute="width" secondItem="1Mv-Qm-cnC" secondAttribute="width" id="sJr-JX-chk"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="PM8-Qj-Bdy">
                                <rect key="frame" x="197" y="438" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="Do8-vB-y6y"/>
                        <color key="backgroundColor" name="black"/>
                        <constraints>
                            <constraint firstItem="Do8-vB-y6y" firstAttribute="trailing" secondItem="g0U-bH-7Fs" secondAttribute="trailing" constant="20" id="5Rg-M4-wiJ"/>
                            <constraint firstItem="PM8-Qj-Bdy" firstAttribute="centerX" secondItem="3ct-CI-dSC" secondAttribute="centerX" id="6cu-f9-B7e"/>
                            <constraint firstItem="PM8-Qj-Bdy" firstAttribute="centerY" secondItem="3ct-CI-dSC" secondAttribute="centerY" id="91S-pr-acm"/>
                            <constraint firstItem="g0U-bH-7Fs" firstAttribute="leading" secondItem="Do8-vB-y6y" secondAttribute="leading" constant="20" id="E6u-T0-usm"/>
                            <constraint firstItem="g0U-bH-7Fs" firstAttribute="top" secondItem="Do8-vB-y6y" secondAttribute="top" constant="10" id="VIf-Ne-xTs"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="PM8-Qj-Bdy" id="oSh-Cz-5qQ"/>
                        <outlet property="counterLabel" destination="vRJ-8W-MH1" id="O9K-uh-r4Z"/>
                        <outlet property="imageView" destination="8DE-Gm-Gqk" id="VQd-GW-Wie"/>
                        <outlet property="noButton" destination="1Mv-Qm-cnC" id="87n-8C-uFz"/>
                        <outlet property="textLabel" destination="u0O-UB-89O" id="cRI-fn-u9h"/>
                        <outlet property="yesButton" destination="7rd-2q-on5" id="KfI-qv-tms"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.072463768115945" y="55.580357142857139"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="black">
            <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="white">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
